<resources>
    <string name="title_activity_login">Log In</string>

    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="prompt_verify_password">verify password</string>
    <string name="action_log_in">Log In</string>
    <string name="action_log_in_short">LOG IN</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_activation_code">This activation code is invalid</string>
    <string name="error_field_required">This field is required</string>

</resources>
