...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/action_im_ready"
                style="@style/SparkButton.InSpinnerBox"
                android:text="@string/im_ready"/>

            <ProgressBar
                android:id="@id/button_progress_indicator"
                style="@style/SparkSpinner"
...
